--- a/res/xml/ion_settings_animations.xml
+++ b/res/xml/ion_settings_animations.xml
@@ -54,8 +54,14 @@
      <PreferenceCategory 
          android:title="@string/misc_animation_title"
          android:key="misc_animation"  >
-        
 
+          <ListPreference
+            android:key="toast_animation"
+            android:title="@string/toast_animation_title"
+            android:entries="@array/toast_animation_entries"
+            android:entryValues="@array/toast_animation_values"
+            android:persistent="false" />
+        
      </PreferenceCategory>
 
      <PreferenceCategory 
