--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -23,6 +23,12 @@
             android:title="@string/qs_brightness_position_bottom_title"
             android:summary="@string/qs_brightness_position_bottom_summary"
             android:defaultValue="false" />
+			
+        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_brightness_slider"
+            android:title="@string/brightness_slider_title"
+            android:summary="@string/brightness_slider_summary"
+            android:defaultValue="true"/>
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
             android:key="qs_tile_title_visibility" 
