--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -279,6 +279,7 @@
     <string-array name="entries_status_bar_battery" translatable="false">
         <item>@string/status_bar_battery_style_port</item>
         <item>@string/status_bar_battery_style_circle</item>
+        <item>@string/status_bar_battery_style_dotted_circle</item>
         <item>@string/status_bar_battery_style_text</item>
         <item>@string/status_bar_battery_style_hidden</item>
     </string-array>
@@ -287,6 +288,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
 </resources>
