Volume key cursor control (2/2)
Change-Id: I8b864798c1c2aa75b45fccb11d4fd7908bc69018

--- a/res/xml/ion_settings_volume.xml
+++ b/res/xml/ion_settings_volume.xml
@@ -18,4 +18,12 @@
     android:title="@string/volume_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <ListPreference
+        android:key="volume_key_cursor_control"
+        android:dialogTitle="@string/volbtn_cursor_control_title"
+        android:title="@string/volbtn_cursor_control_title"
+        android:entries="@array/volbtn_cursor_control_entries"
+        android:entryValues="@array/volbtn_cursor_control_values"
+        android:persistent="false" />
+
 </PreferenceScreen>
