--- a/res/xml/ion_settings_ime.xml
+++ b/res/xml/ion_settings_ime.xml
@@ -18,4 +18,38 @@
     android:title="@string/ime_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <SwitchPreference
+        android:key="keyboard_rotation_toggle"
+        android:title="@string/keyboard_rotation_toggle_title"
+        android:summary="@string/keyboard_rotation_toggle_summary"
+        android:defaultValue="false"
+        android:persistent="false" />
+
+    <ListPreference
+        android:key="keyboard_rotation_timeout"
+        android:persistent="false"
+        android:dialogTitle="@string/keyboard_rotation_timeout_title"
+        android:title="@string/keyboard_rotation_timeout_title"
+        android:entries="@array/keyboard_rotation_timeout_entries"
+        android:entryValues="@array/keyboard_rotation_timeout_values"
+        android:dependency="keyboard_rotation_toggle" />
+
+    <SwitchPreference
+        android:key="disable_fullscreen_keyboard"
+        android:title="@string/disable_fullscreen_keyboard_title"
+        android:summary="@string/disable_fullscreen_keyboard_summary"
+        android:defaultValue="false"
+        android:persistent="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="status_bar_ime_switcher"
+        android:title="@string/ime_switcher_notify"
+        android:summary="@string/ime_switcher_notify_summary"
+        android:defaultValue="true" />
+
+    <SwitchPreference
+        android:key="show_enter_key"
+        android:title="@string/show_enter_key_title"
+        android:summary="@string/show_enter_key_summary"
+        android:persistent="false" />
 </PreferenceScreen>
