Disable Quick Settings on secure lockscreen (2/2)
Change-Id: I95ef5b8641b73815b52c41b73f7abb15bf1fd65c

--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -29,6 +29,12 @@
         android:title="@string/fprint_sucess_vib_title"
         android:summary="@string/fprint_sucess_vib_summary"
         android:persistent="false" />
+		
+    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+        android:key="status_bar_locked_on_secure_keyguard"
+        android:title="@string/block_on_secure_keyguard_title"
+        android:summary="@string/block_on_secure_keyguard_summary"
+        android:defaultValue="false"/>
 
     <Preference
             android:title="@string/lockscreen_tuner_title" >
