--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -175,4 +175,8 @@
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navbar Buttons</string>
 
+    <!-- Disable QS on lockscreen -->
+    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
+    <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
+
 </resources>
