--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -67,6 +67,12 @@
             android:summary="@string/lockscreen_show_status_bar_summary"
             android:defaultValue="true" />
 
+        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+            android:key="status_bar_shown_on_secure_keyguard"
+            android:title="@string/show_qs_on_secure_keyguard_title"
+            android:summary="@string/show_qs_on_secure_keyguard_summary"
+            android:defaultValue="true"/>
+
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_battery_info"
             android:title="@string/lockscreen_battery_info_title"
