--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -96,6 +96,8 @@
     <!-- Fingerprint authentication vibration -->
     <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
     <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
+    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
+    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
 
     <!-- Statusbar net monitor -->
     <string name="network_traffic_state_title">Network traffic</string>
