--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -43,6 +43,13 @@
             android:summary="@string/network_traffic_state_summary"
             android:defaultValue="true" />
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="network_traffic_hidearrow"
+            android:title="@string/network_traffic_hidearrow"
+            android:summary="@string/network_traffic_hidearrow_summary"
+            android:dependency="network_traffic_state"
+            android:defaultValue="false" />
+
         <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="network_traffic_autohide_threshold"
             android:title="@string/network_traffic_autohide_threshold_title"
