--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -50,4 +50,17 @@
             android:min="0"
             settings:units="" />
 
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="status_bar_show_carrier"
+            android:title="@string/show_carrier_title"
+            android:dialogTitle="@string/show_carrier_title"
+            android:entries="@array/carrier_label_entries"
+            android:entryValues="@array/carrier_label_values"
+            android:summary="%s"
+            android:defaultValue="1" />
+
+        <PreferenceScreen
+            android:key="custom_carrier_label"
+            android:title="@string/custom_carrier_label_title" />
+
 </PreferenceScreen>
