--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -59,6 +59,12 @@
             android:title="@string/button_backlight_on_touch_only_title"
             android:summary="@string/button_backlight_on_touch_only_summary"
             android:defaultValue="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="anbi_enabled_option"
+            android:title="@string/anbi_title"
+            android:summary="@string/anbi_summary"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
