Double tap to sleep on lockscreen [2/2]
Change-Id: I828838c0ea4b2e394b4430fc7e221160ce96d531

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -507,4 +507,8 @@
     <string name="brightness_slider_title">Brightness slider</string>
     <string name="brightness_slider_summary">Show the brightness slider underneath quick settings</string>
 
+    <!-- DoubleTap2Sleep -->
+    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
+    <string name="double_tap_sleep_lockscreen_sumary">Double tap anywhere on the lockscreen to put phone to sleep</string>
+
 </resources>
