--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -23,6 +23,12 @@
         android:title="@string/show_cpu_title"
         android:summary="@string/show_cpu_summary"/>
 
+    <Preference
+        android:key="wakelock_blocker"
+        android:title="@string/wakelock_blocker_title"
+        android:summary="@string/wakelock_blocker_summary"
+        android:fragment="com.ion.ionizer.fragments.WakeLockBlocker" />
+
     <com.ion.ionizer.preferences.SystemSettingListPreference
         android:key="screenshot_type"
         android:entries="@array/screenshot_type_entries"
