Allow to disable HOME key when ringing [2/2]

--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -84,6 +84,12 @@
         android:key="home_key"
         android:title="@string/hardware_keys_home_key_title" >
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="allow_incall_home"
+            android:title="@string/allow_incall_home_title"
+            android:summary="@string/allow_incall_home_summary"
+            android:defaultValue="true" />
+
         <com.ion.ionizer.preferences.ActionPreference
             android:key="hwkeys_button_home_single_tap"
             android:summary="@string/hardware_keys_single_tap_summary"
