--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -18,4 +18,16 @@
     android:title="@string/statusbar_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="network_traffic_state"
+        android:title="@string/network_traffic_state_title"
+        android:summary="@string/network_traffic_state_summary"
+        android:defaultValue="true" />
+
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="network_traffic_autohide_threshold"
+        android:title="@string/network_traffic_autohide_threshold_title"
+        android:max="10"
+        settings:min="0"
+        settings:units="" />
 </PreferenceScreen>
