Bring AppOps over to ionizer
Change-Id: I5cb9ac81d58146d121e95ddc556d091f340e2296

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -178,5 +178,8 @@
     <!-- Disable QS on lockscreen -->
     <string name="block_on_secure_keyguard_title">Disable quick settings</string>
     <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
+	
+    <string name="app_ops_settings_title">App Ops</string>
+    <string name="app_ops_settings_summary">Block app permissions</string>
 
 </resources>
