--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -114,6 +114,12 @@
         android:defaultValue="false"
         settings:allowDividerAbove="true"/>
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="show_fourg_icon"
+        android:title="@string/show_fourg_icon_title"
+        android:summary="@string/show_fourg_icon_summary"
+        android:defaultValue="false"/>
+
     <ListPreference
         android:key="quick_pulldown"
         android:title="@string/quick_pulldown_title"
