--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -729,4 +729,8 @@
     <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
     <string name="pocket_judge_fp_title">Allow FP in pocket mode</string>
     <string name="pocket_judge_fp_summary">Listen for fingerprint when pocket detection is active</string>
+
+    <!-- Notifications while screen on -->
+    <string name="notification_sound_vib_screen_on_title">Noisy notifications if screen on</string>
+    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
 </resources>
