--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -105,4 +105,12 @@
     <!-- QuickSettings haptic feedback -->
     <string name="quick_settings_vibrate_title">Vibrate on touch</string>
     <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
+    
+            <!-- Screen Off animation --> 
+    <string name="screen_off_animation_title">Screen off animation</string> 
+    <string name="screen_off_animation_fade">Simple fade</string> 
+    <string name="screen_off_animation_color">Color fade</string> 
+    <string name="screen_off_animation_crt">CRT</string> 
+    <string name="screen_off_animation_scale">Scale</string> 
+
 </resources>
