--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -407,6 +407,9 @@
     <string name="clock_cat">Clock</string>
     <string name="status_bar_clock_font_style_title">Font style</string>
     <string name="status_bar_clock_font_size_title">Font size</string>
+    <string name="clock_date_right">Right of time</string>
+    <string name="clock_date_left">Left of time</string>
+    <string name="clock_date_position">Date position</string>
 
     <!-- QS footer warnings -->
     <string name="qs_footer_warnings_title">QS footer warnings</string>
