QS footer visibilities [2/2]
Change-Id: I00a6becbc11b1e5bf8a2a4249938cdd5c79b8f10

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -479,4 +479,10 @@
     <string name="burn_in_protection_summary">Shift navbar and statusbar icons to prevent burn-in</string>
     <string name="burn_in_protection_interval_title">Interval of shift</string>
 
+    <!-- QS footer icons -->
+    <string name="qs_footer_services_title">Running Services icon</string>
+    <string name="qs_footer_services_summary">Display Running Services icon in quick settings footer</string>
+    <string name="qs_footer_settings_title">Settings icon</string>
+    <string name="qs_footer_settings_summary">Display Settings icon in quick settings footer</string>
+
 </resources>
