Add CPU info overlay [2/2]
this shows
CPU temp (if available)
for every core governor + online + freq

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -297,4 +297,8 @@
 
     <string name="sysui_qqs_count_title">Small tiles</string>	
 
+    <!-- CPU info -->
+    <string name="show_cpu_info">Show CPU info</string>
+    <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>	
+
 </resources>
