Custom small QS tiles [2/2]
Change-Id: I42d7df7a3f8a3ddc562fdf32caf27402c1b5aba5

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -295,4 +295,6 @@
     <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
     <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
 
+    <string name="sysui_qqs_count_title">Small tiles</string>	
+
 </resources>
