--- a/res/xml/ion_settings_volume.xml
+++ b/res/xml/ion_settings_volume.xml
@@ -18,6 +18,11 @@
     android:title="@string/volume_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <Preference
+        android:key="volume_steps"
+        android:title="@string/volume_steps_title"
+        android:fragment="com.ion.ionizer.fragments.VolumeSteps" />
+
     <ListPreference
         android:key="volume_key_cursor_control"
         android:dialogTitle="@string/volbtn_cursor_control_title"
