--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -80,6 +80,15 @@
     <string name="weather_title">Weather</string>
     <string name="volume_title">Volume Rockers</string>
 
+    <!-- Dashboard conditions--> 
+    <string name="dashboard_category">Dashboard options</string> 
+    <string name="dashboard_conditions_title">Dashboard conditions</string> 
+    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string> 
+    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string> 
+    <string name="dashboard_suggestions_title">Dashboard suggestions</string> 
+    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string> 
+    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string> 
+
     <!-- General strings -->
     <string name="ok">OK</string>
     <string name="reset">Reset</string>
