--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -132,5 +132,12 @@
             android:summary="@string/battery_light_summary"
             android:fragment="com.ion.ionizer.fragments.BatteryLightSettings"
             android:defaultValue="true" />
+
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="flashlight_on_call"
+            android:title="@string/flashlight_on_call_title"
+            android:entries="@array/flashlight_on_call_entries"
+            android:entryValues="@array/flashlight_on_call_values"
+            android:defaultValue="0" />
     </PreferenceCategory>
 </PreferenceScreen>
