--- a/res/drawable/bg_app_chooser.xml
+++ b/res/drawable/bg_app_chooser.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 ion-OS
+<!--  Copyright (C) 2019 The ion-OS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,14 +13,18 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-    <!-- Color Picker -->
-    <dimen name="oval_notification_size">26dp</dimen>
 
-    <!-- Shortcut picker -->
-    <dimen name="shortcut_picker_left_padding">70dip</dimen>
-
-    <dimen name="alert_dialog_padding_material">20dp</dimen>
-    <dimen name="floating_widget_view_padding">10dp</dimen>
-    <dimen name="floating_widget_window_padding">10dp</dimen>
-</resources>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle" >
+            <solid android:color="?android:attr/colorBackgroundFloating" />
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle" >
+            <stroke android:width="1dp" android:color="@android:color/black" />
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
+</layer-list>
