--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -697,4 +697,13 @@
     <!-- Force Expanded Settings -->
     <string name="force_expanded_settings_title">Force Expanded Settings</string>
     <string name="force_expanded_settings_summary">Expand Settings Layout</string>
+
+    <!-- Per App aspect Ratio -->
+    <string name="action_save">Save</string>
+    <string name="aspect_ratio_apps_enabled_title">Enable scaling</string>
+    <string name="aspect_ratio_apps_enabled_summary">Allow legacy apps to use full screen</string>
+    <string name="aspect_ratio_apps_list_summary"></string>
+    <string name="aspect_ratio_apps_list_title">Apps allowed to use scaling</string>
+    <string name="aspect_ratio_category_title">Legacy app scaling</string>
+    <string name="aspect_ratio_apps_info">Applications need to be restarted after changes</string>
 </resources>
