--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -72,4 +72,33 @@
             android:summary="@string/wakelock_blocker_summary"
             android:fragment="com.ion.ionizer.fragments.WakeLockBlocker" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="aspect_ratio_category"
+        android:title="@string/aspect_ratio_category_title">
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="aspect_ratio_apps_enabled"
+            android:title="@string/aspect_ratio_apps_enabled_title"
+            android:summary="@string/aspect_ratio_apps_enabled_summary"
+            android:defaultValue="false" />
+
+        <com.ion.ionizer.preferences.AppMultiSelectListPreference
+            android:dependency="aspect_ratio_apps_enabled"
+            android:summary="@string/aspect_ratio_apps_list_summary"
+            android:title="@string/aspect_ratio_apps_list_title"
+            android:key="aspect_ratio_apps_list"
+            android:persistent="false" />
+
+        <com.ion.ionizer.preferences.ScrollAppsViewPreference
+            android:dependency="aspect_ratio_apps_enabled"
+            android:key="aspect_ratio_apps_list_scroller"
+            android:persistent="false"
+            android:selectable="false" />
+
+        <Preference
+            android:dependency="aspect_ratio_apps_enabled"
+            android:persistent="false"
+            android:summary="@string/aspect_ratio_apps_info" />
+    </PreferenceCategory>
 </PreferenceScreen>
