Show battery fully charged notification [2/2]
Change-Id: Ie3c64e4723d44babe7a24dad2271eb67e707ef4a

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -276,4 +276,9 @@
     <string name="heads_up_snooze_10min">10 minutes</string>
     <string name="heads_up_snooze_15min">15 minutes</string>
     <string name="heads_up_snooze_20min">20 minutes</string>
+
+    <!-- Battery fully charged -->
+    <string name="battery_fully_charged_notif_title">Battery fully charged</string>
+    <string name="battery_fully_charged_notif_summary">Show a notification when the battery is fully charged</string>
+
 </resources>
