--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -211,6 +211,7 @@
 
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navbar Buttons</string>
+    <string name="navbar_visibility">Allow Navigation Bar</string>
 
     <!-- Disable QS on lockscreen -->
     <string name="block_on_secure_keyguard_title">Disable Quick settings</string>
