Add haptic on action switch

--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -22,6 +22,12 @@
             android:key="hardware_keys"
             android:title="@string/hardware_keys_category" >
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="haptic_on_action_key"
+            android:title="@string/haptic_on_action_title"
+            android:summary="@string/haptic_on_action_summary"
+            android:defaultValue="false" />
+
     <com.ion.ionizer.preferences.CustomSeekBarPreference
             android:key="button_brightness"
             android:title="@string/button_brightness_title"
