--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -350,4 +350,8 @@
     <string name="hardware_keys_double_tap_title">Double tap action</string>
     <string name="hardware_keys_category">Hardware keys</string>
     <string name="hardware_keys_disable_title">Disable keys</string>
+
+    <!-- Haptic Action -->
+    <string name="haptic_on_action_title">Haptic on action</string>
+    <string name="haptic_on_action_summary">Haptic feedback on action instead on press</string>
 </resources>
