--- a/res/xml/ion_settings_animations.xml
+++ b/res/xml/ion_settings_animations.xml
@@ -18,10 +18,44 @@
     android:title="@string/animations_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+      <PreferenceCategory 
+         android:title="@string/system_keyguard_animation_title"
+         android:key="system_title"  >
+
          <PreferenceScreen
             android:key="system_animation"
             android:title="@string/system_animation_title"
             android:summary="@string/system_animation_summary"
             android:fragment="com.ion.ionizer.fragments.ui.AnimationControls" />
+
+     </PreferenceCategory>
+    
+     <PreferenceCategory 
+         android:title="@string/list_animation_title"
+         android:key="list_animation"  >
+        
+
+     </PreferenceCategory>
+ 
+     <PreferenceCategory 
+         android:title="@string/tile_animation_title"
+         android:key="tile_animation">
+
+    
+     </PreferenceCategory>
+
+     <PreferenceCategory 
+         android:title="@string/misc_animation_title"
+         android:key="misc_animation"  >
+        
+
+     </PreferenceCategory>
+
+     <PreferenceCategory 
+         android:title="@string/scroll_title"
+         android:key="scroll" >
+
+
+     </PreferenceCategory>
 
 </PreferenceScreen>
