AOKP custom system animations (2/2)

--- a/res/xml/ion_settings_animations.xml
+++ b/res/xml/ion_settings_animations.xml
@@ -18,4 +18,10 @@
     android:title="@string/animations_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+         <PreferenceScreen
+            android:key="system_animation"
+            android:title="@string/system_animation_title"
+            android:summary="@string/system_animation_summary"
+            android:fragment="com.ion.ionizer.fragments.ui.AnimationControls" />
+
 </PreferenceScreen>
