--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -150,5 +150,15 @@
             android:summary="@string/battery_light_summary"
             android:fragment="com.ion.ionizer.fragments.BatteryLightSettings"
             android:defaultValue="true" />
+
+        <Preference
+            android:key="notification_light"
+            android:fragment="com.android.settings.applications.manageapplications.ManageApplications"
+            android:title="@string/notification_light_settings"
+            android:summary="@string/notification_light_settings_summary" >
+            <extra
+                android:name="classname"
+                android:value="com.android.settings.Settings$NotificationAppListActivity" />
+        </Preference>
     </PreferenceCategory>
 </PreferenceScreen>
