Lockscreen Clock Widget Fonts [2/2]

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -459,9 +459,7 @@
     <string name="qs_columns_landscape_title">Columns (Landscape)</string>
 
     <!-- Lock Clock Fonts -->
-    <string name="lock_clock_font_title">Clock font options</string>
-    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
-    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
+    <string name="lock_clock_font_title">Clock font style</string>
     <string name="lock_clock_font_stock">Normal (Default)</string>
     <string name="lock_clock_font_bold">Bold</string>
     <string name="lock_clock_font_italic">Italic</string>
@@ -647,7 +645,7 @@
     <string name="lockscreen_clock_selection_spidey">Analog (Spidey)</string>
     <string name="lockscreen_clock_selection_dot">Analog (Dot)</string>
     <string name="lockscreen_clock_selection_spectrum">Analog (Spectrum)</string>
-    <string name="lockscreen_clock_selection_sneeky">Analog (Sneeky)</string>4
+    <string name="lockscreen_clock_selection_sneeky">Analog (Sneeky)</string>
     <string name="lockscreen_clock_selection_text">Text (Android Q)</string>
 
 </resources>
