--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -142,6 +142,15 @@
             android:dependency="lockscreen_clock"
             android:defaultValue="0" />
 
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="lock_clock_fonts"
+            android:title="@string/lock_clock_font_title"
+            android:entries="@array/lock_clock_fonts_entries"
+            android:entryValues="@array/lock_clock_fonts_values"
+            android:dependency="lockscreen_clock"
+            android:defaultValue="0"
+            android:persistent="false" />
+
         <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="lockclock_font_size"
             android:title="@string/lockclock_font_size_title"
