--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -95,4 +95,15 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <!-- Screenshot type  -->
+    <string-array name="screenshot_type_entries">
+        <item>@string/screenshot_type_fullscreen</item>
+        <item>@string/screenshot_type_partial</item>
+    </string-array>
+
+    <string-array name="screenshot_type_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
