Settings: allow to switch back to pre P mobile type icon style
Change-Id: I731946fcfd644f33e8882e06dec41345ae8a897f

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -617,4 +617,7 @@
     <string name="lockscreen_cover_filter_blur">Blur</string>
     <string name="lockscreen_cover_filter_grayblur">Grayscale and blurred</string>
 
+    <string name="use_old_mobiletype_title">Use old mobile type style</string>
+    <string name="use_old_mobiletype_summary">Merge signal and type icons</string>
+
 </resources>
