--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -107,6 +107,13 @@
             android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
     </Preference>
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="use_old_mobiletype"
+        android:title="@string/use_old_mobiletype_title"
+        android:summary="@string/use_old_mobiletype_summary"
+        android:defaultValue="false"
+        settings:allowDividerAbove="true"/>
+
     <ListPreference
         android:key="quick_pulldown"
         android:title="@string/quick_pulldown_title"
