--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -466,4 +466,10 @@
     <string name="lock_clock_font_black">Black</string>
     <string name="lock_clock_font_black_italic">Black Italic</string> 
 
+    <!-- Burn-in Protection -->
+    <string name="navigation_burnin_category">Burn-in Protection</string>
+    <string name="burn_in_protection_title">Burn-in Protection</string>
+    <string name="burn_in_protection_summary">Shift navbar and statusbar icons to prevent burn-in</string>
+    <string name="burn_in_protection_interval_title">Interval of shift</string>
+
 </resources>
