--- a/res/xml/ion_settings_recents.xml
+++ b/res/xml/ion_settings_recents.xml
@@ -18,6 +18,14 @@
     android:title="@string/recents_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <ListPreference
+        android:key="recents_component"
+        android:title="@string/recents_component_type_title"
+        android:dialogTitle="@string/recents_component_type_title"
+        android:entries="@array/recents_component_type_title_entries"
+        android:defaultValue="0"
+        android:entryValues="@array/recents_component_type_title_values"/>
+
     <Preference
         android:key="hide_app_from_recents"
         android:title="@string/hide_apps_from_recents_title"
