--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -22,15 +22,23 @@
         android:key="theme_category"
         android:title="@string/theme_category_title">
 
-    <ListPreference
-        android:key="systemui_theme"
-        android:title="@string/device_theme"
-        android:entries="@array/systemui_theme_entries"
-        android:entryValues="@array/systemui_theme_values" />
+        <ListPreference
+            android:key="systemui_theme"
+            android:title="@string/device_theme"
+            android:entries="@array/systemui_theme_entries"
+            android:entryValues="@array/systemui_theme_values" />
 
         <Preference
             android:key="accent_picker"
             android:title="@string/theme_accent_picker_title" />
+
+        <ListPreference
+            android:key="qs_tile_style"
+            android:title="@string/qs_tile_style_title"
+            android:persistent="false"
+            android:entries="@array/qs_selector_entries"
+            android:entryValues="@array/qs_selector_values" />
+
     </PreferenceCategory >
 
     <PreferenceCategory>
