Material toast icon switch [2/2]

--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -23,6 +23,12 @@
         android:title="@string/heads_up_notifications"
         android:fragment="com.ion.ionizer.fragments.HeadsUpSettings" />
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
+            android:key="toast_icon" 
+            android:title="@string/toast_icon_title" 
+            android:summary="@string/toast_icon_summary" 
+            android:defaultValue="true" /> 
+
     <PreferenceCategory
         android:key="incall_vib_options"
         android:title="@string/incall_vibration_category" >
