--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -220,7 +220,7 @@
     <string name="navbar_tuner_title">Navbar Buttons</string>
 
     <!-- Disable QS on lockscreen -->
-    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
+    <string name="block_on_secure_keyguard_title">Disable Quick settings</string>
     <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
 	
     <string name="app_ops_settings_title">App Ops</string>
@@ -525,5 +525,9 @@
     <string name="qstile_oreo_circle_trim">Oreo (Circle Trim)</string>
     <string name="qstile_oreo_squircle_trim">Oreo (Squircle Trim)</string>
     <string name="qstile_squircle_trim">Squircle (Trim)</string>
+
+    <!-- Show VoLTE icon on statusbar -->
+    <string name="volte_icon_title">VoLTE icon</string>
+    <string name="volte_icon_summary">Display VoLTE icon in statusbar</string>
 
 </resources>
