--- a/res/xml/ion_settings_lockscreen_date.xml
+++ b/res/xml/ion_settings_lockscreen_date.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 ion-OS
+<!-- Copyright (C) 2019-2020 ion-OS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -38,6 +38,27 @@
     <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
         android:key="lockdate_font_size"
         android:title="@string/lockdate_font_size_title"
+        android:max="40"
+        android:min="10"
+        ionionizer:units="dp"
+        android:defaultValue="18"
+        android:persistent="false" />
+
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingListPreference
+        android:key="lock_ownerinfo_fonts"
+        android:title="@string/lock_ownerinfo_font_title"
+        android:entries="@array/additional_fonts_entries"
+        android:entryValues="@array/additional_fonts_values"
+        android:defaultValue="0"
+        android:persistent="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="lockowner_font_size"
+        android:title="@string/lockowner_font_size_title"
         android:max="40"
         android:min="10"
         ionionizer:units="dp"
